--- a/styles.css
+++ b/styles.css
@@ -138,18 +138,16 @@ body {
   color: var(--main-text-color);
 
   margin: 0 auto;
-	width: 730px;
+  width: 730px;
   margin-bottom: 70px;
-
 }
 .works-list {
-display: flex;
-margin-left: -30px;
+  display: flex;
+  margin-left: -30px;
 }
-.works-item{
+.works-item {
   display: flex;
   width: 350px;
-
 }
 
 .first-wrap {
@@ -158,20 +156,21 @@ margin-left: -30px;
   justify-content: center;
   align-items: center;
   width: 110px;
-    height: 110px;
-    border: 1px solid #E0E0E0;
-    border-radius: 50%;
-    margin-right: 17px;
+  height: 110px;
+  border: 1px solid #e0e0e0;
+  border-radius: 50%;
+  margin-right: 17px;  
 }
+
 .second-wrap {
   display: flex;
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
   width: 90px;
-    height: 90px;
-    border: 1px solid #4985FF;
-    border-radius: 50%;
+  height: 90px;
+  border: 1px solid #4985ff;
+  border-radius: 50%;
 }
-.works-item{
+.works-item {
   margin-left: 30px;
 }
