--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,12 @@ body {
 
 /* header */
 .header {
-  background-color: gray;
+  
 
   border-bottom: 1px solid var(--header-line);
+  position: absolute;
+  width: 100%;
+
 }
 
 .container {
@@ -60,6 +63,17 @@ body {
   line-height: 1.25;
   padding: 40px 20px;
   display: block;
+  position: relative;
+}
+.current::after{
+  display:block;
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: var(--main-bg-color);
+  position: absolute;
+  bottom:0;
+  left:0;
 }
 
 .nav-list {
@@ -70,9 +84,12 @@ body {
 /* hero */
 .hero-section {
   background-color: grey;
-
+  background-image:linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url(./images/hero-bg.jpeg);
   padding-top: 319px;
   padding-bottom: 335px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .hero-title {
