Add color for icons

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h6 {
 
 ul {
   margin: 0;
-  padding: 0;  
+  padding: 0;
 }
 
 .link {
@@ -41,12 +41,9 @@ body {
 
 /* header */
 .header {
-  
-
   border-bottom: 1px solid var(--header-line);
   position: absolute;
   width: 100%;
-
 }
 
 .container {
@@ -65,15 +62,15 @@ body {
   display: block;
   position: relative;
 }
-.current::after{
-  display:block;
+.current::after {
+  display: block;
   content: '';
   width: 100%;
   height: 2px;
   background-color: var(--main-bg-color);
   position: absolute;
-  bottom:0;
-  left:0;
+  bottom: 0;
+  left: 0;
 }
 
 .nav-list {
@@ -84,7 +81,8 @@ body {
 /* hero */
 .hero-section {
   background-color: grey;
-  background-image:linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url(./images/hero-bg.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url(./images/hero-bg.jpeg);
   padding-top: 319px;
   padding-bottom: 335px;
   background-repeat: no-repeat;
@@ -161,6 +159,7 @@ body {
 .works-list {
   display: flex;
   margin-left: -30px;
+  margin-bottom: 55px;
 }
 .works-item {
   display: flex;
@@ -176,8 +175,8 @@ body {
   height: 110px;
   border: 1px solid #e0e0e0;
   border-radius: 50%;
-  margin-right: 17px;  
-  }
+  margin-right: 17px;
+}
 
 .second-wrap {
   display: flex;
@@ -190,4 +189,8 @@ body {
 }
 .works-item {
   margin-left: 30px;
+}
+
+.works-icon {
+  fill: var(--accent-color);
 }
