--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,19 @@ ul {
   padding: 0;
 }
 
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 .link {
   text-decoration: none;
 }
@@ -76,6 +89,49 @@ body {
 .nav-list {
   display: flex;
   justify-content: flex-end;
+}
+
+/* Togle */
+.lable-togle {
+
+}
+
+.check-togle {
+
+}
+
+.check-togle:checked + .cercl-wrap .cercl-togle{
+  transform: translate(40px, -50%);
+}
+
+.check-togle:checked + .cercl-wrap {
+  background-color: green;
+}
+
+.cercl-wrap {
+  position: relative;
+
+  width: 80px;
+  height: 40px;
+  border-radius: 34px;
+  background-color: gray;
+  
+  transition:background-color 500ms ease-in ;
+}
+
+.cercl-togle {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+
+  transform: translateY(-50%);
+
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: white;
+
+  transition: transform 500ms ease-in;
 }
 
 /* hero */
