--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -4,3 +4,68 @@
     align-items: $ai;
 }
 
+
+@mixin mq($type) {
+  $mobile: 480px;
+  $tablet: 768px;
+  $desktop: 1200px;
+
+  @if $type == 'mob' {
+    @media screen and (min-width: $mobile) {
+      @content;
+    }
+  }
+
+  @if $type == 'mob-only' {
+    @media screen and (max-width: ($tablet - 0.02)) {
+      @content;
+    }
+  }
+
+  @if $type == 'tab' {
+    @media screen and (min-width: $tablet) {
+      @content;
+    }
+  }
+
+  @if $type == 'tab-only' {
+    @media screen and (min-width: $tablet) and (max-width: ($desktop - 0.02)) {
+      @content;
+    }
+  }
+
+  @if $type == 'desk' {
+    @media screen and (min-width: $desktop) {
+      @content;
+    }
+  }
+
+  @if $type == 'not-desk' {
+    @media screen and (max-width: ($desktop - 0.02)) {
+      @content;
+    }
+  }
+
+}
+
+
+
+
+
+// @mixin mobile{
+//     @media screen and(min-width:480px){
+//         @content
+//     }
+    
+// };
+// @mixin tablet {
+//     @media screen and(min-width:768px) {
+//         @content
+//     }
+
+// };
+// @mixin desktop {
+//     @media screen and(min-width:1200px) {
+//         @content
+//     }
+// }
