added images+background-images (1x,2x)

--- a/css/main.css
+++ b/css/main.css
@@ -91,4 +91,53 @@
   .adaptive {
     width: 960px;
   }
+}
+.barber-box {
+  width: 418px;
+  height: 360px;
+  background-color: black;
+}
+
+@media screen and (min-width: 768px) {
+  .barber-box {
+    width: 330px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .barber-box {
+    width: 270px;
+  }
+}
+.barbers-hero {
+  width: 100%;
+  height: 600px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/mobile-hero.jpg);
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .barbers-hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/mobile-hero@2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .barbers-hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/tablet-hero.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .barbers-hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/tablet-hero@2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .barbers-hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/desktop-hero.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .barbers-hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/desktop-hero@2x.jpg);
+  }
 }/*# sourceMappingURL=main.css.map */
