--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,5 +2,5 @@
 @import "./utils/mixin";
 @import "./components/header";
 @import "./components/adaptive-box";
-
+@import "./components/barber-box";
 
